just big update, no words, all better